--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,14 @@ asyncpg = {extras = ["all"], version = "^0.29.0"}
 moviepy = "^1.0.3"
 yookassa = "^3.3.0"
 email-validator = "^2.2.0"
+aiosqlite = "^0.20.0"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
 pytest-mock = "^3.14.0"
 pytest-asyncio = "^0.24.0"
+alembic = "^1.13.3"
 
 [build-system]
 requires = ["poetry-core"]
