--- a/requirements.txt
+++ b/requirements.txt
@@ -102,6 +102,9 @@ aiohttp==3.10.8 ; python_version >= "3.12" and python_version < "4.0" \
 aiosignal==1.3.1 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:54cd96e15e1649b75d6c87526a6ff0b6c1b0dd3459f43d9ca11d48c339b68cfc \
     --hash=sha256:f8376fb07dd1e86a584e4fcdec80b36b7f81aac666ebc724e2c090300dd83b17
+aiosqlite==0.20.0 ; python_version >= "3.12" and python_version < "4.0" \
+    --hash=sha256:36a1deaca0cac40ebe32aac9977a6e2bbc7f5189f23f4a54d5908986729e5bd6 \
+    --hash=sha256:6d35c8c256637f4672f843c31021464090805bf925385ac39473fb16eaaca3d7
 annotated-types==0.7.0 ; python_version >= "3.12" and python_version < "4.0" \
     --hash=sha256:1f02e8b43a8fbbc3f3e0d4f0f4bfc8131bcb4eebe8849b8e5c773f3a1c582a53 \
     --hash=sha256:aff07c09a53a08bc8cfccb9c85b05f1aa9a2a6f23728d790723543408344ce89
