style(structure): uncommited changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     container_name: aiogram-bot
     restart: always
-    command:
-      sh -c "python3 /app/run.py"
+#    command:
+#      sh -c "python3 /app/run.py"
     env_file:
       - ./src/.env
